--- a/ElderEcho/ElderEcho.html
+++ b/ElderEcho/ElderEcho.html
@@ -18,7 +18,8 @@
             </ul>
         </nav>
         <div class="user-avatar">
-            <img src="assets/user/young-asian.jpg" alt="User Avatar">
+            <img src="assets/user/young-asian.jpg" alt="User Icon">
+            <img src="assets/icon/message.png" alt="Message Icon">
         </div>
     </header>
 
